# vllm-benchmark-suite

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  LICENSE  QUICKSTART.md  README.md  action.yml  pyproject.toml  requirements.txt  test_prompts.py  vllm_benchmark_suite.py  vllm_benchmark_suitev2.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
grafana/: dashboard.json
src/vllm_benchmark/: __init__.py  cli.py  config.py
src/vllm_benchmark/analysis/: __init__.py  diagnostics.py  publish.py  regression.py  scoring.py  statistics.py
src/vllm_benchmark/core/: __init__.py  async_engine.py  benchmark.py  metrics.py  prompts.py  server.py  traffic.py
src/vllm_benchmark/reports/: __init__.py  charts.py  html_report.py  terminal.py
tests/: test_async_engine.py  test_config.py  test_diagnostics.py  test_metrics.py  test_prompts.py  test_publish.py  test_scoring.py  test_statistics.py
